fix(landing): adjust image position to improve alignment within the layout

--- a/src/app/features/landing/presentation/components/landing-page.component.scss
+++ b/src/app/features/landing/presentation/components/landing-page.component.scss
@@ -37,7 +37,7 @@ $offset-to-align-with-bottom: fn.token('spacing', 'xxs');
       img {
         position: relative;
         top: 2rem;
-        left: -1.25rem;
+        left: -0.25rem;
       }
 
       .p-landing__title {
